namespace Pig_n_Go.Order
{
    public enum OrderStatus
    {
        Created,
        Accepted,
        Performed,
        Cancelled,
    }
}